  for more details.

  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
*/

GA  1.1.6 -
- C/C++ won't build against Boost-devel-1.41.0-25.EL6.I686 (Bug#20125824)
- Make install fail for out of source build (Bug#19447498)

GA  1.1.5 -
- DatabaseMetaData::getProcedures() returns syntax error for connection option
  metadatauseinfoschema=false (Bug#19505421)
- DatabaseMetaData::getColumns() returns empty resultset when
  metadataUseInfoSchema is true and for no schema. (Bug#19147897)
- ResultSetMetaData::getColumnName() returns display name instead of actual
  column name. (Bug#19244736)
- ResultSetMetaData::getTables() not returning result for VIEW when
  metadatauseinfoschema=false. (Bug#19505348)
- Version macros missing from installed headers file. (Bug#19553971)
- Getting multiple resultset from procedure using prepared statement gives
  error (Bug#19147677).
- Connection losses are not detected while fetching resultset using next()
  (Bug#18886278/69031).
- Remove boost variant from API (wl#7030)
- Make close() method or destructor of Connection object to always close
  the connection with server (wl#7028)
- Added max_statement_timeout and other connect options (MYSQL_DEFAULT_AUTH,
  MYSQL_PLUGIN_DIR, MYSQL_SET_CHARSET_DIR, MYSQL_READ_DEFAULT_FILE,
  MYSQL_READ_DEFAULT_GROUP, MYSQL_OPT_CONNECT_ATTR_DELETE,
  MYSQL_OPT_CONNECT_ATTR_RESET, MYSQL_OPT_LOCAL_INFILE) (Bug#19479950)
- Added missing sort order for DatabaseMetaData::getImportedKeys() and
  DatabaseMetaData::getIndexInfo() for no_i_s case. (Bug#19505248)
- There is no reconnection function in Connector/C++ (Bug#14207722)
- WB sends unnecessary COM_PING operations. (Bug#17186530)
- Double free or corruption error due to global extern string variable localhost 
  referenced at more then one places (Bug#19910311)