@@ -56,6 +56,7 @@ public:
     TEST_CASE(bug71606);
     TEST_CASE(bug72700);
     TEST_CASE(bug66871);
+    TEST_CASE(bug20085944);
   }
 
   /**
@@ -88,6 +89,8 @@ public:
   void bug72700();
 
   void bug66871();
+
+  void bug20085944();
 
 };
 
